<resources>
    <string name="app_name">nhom1</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="emailhint">Email...</string>
    <string name="passwordhint">Mật khẩu...</string>
    <string name="remember_me">Ghi nhớ tôi?</string>
    <string name="log_in">Đăng nhập</string>
    <string name="don_t_have_account_yet">Chưa có tài khoản?</string>
    <string name="sign_up">Đăng ký</string>
    <string name="confirm_password_hint">Nhập lại mật khẩu...</string>
    <string name="register">Đăng ký</string>
    <string name="already_have_an_account">Đã có tài khoản?</string>
    <string name="home">Home</string>
    <string name="th_ng_b_o">Thông Báo</string>
    <string name="th_ng_k">Thống Kê</string>
    <string name="add_staff">Thêm Nhân viên</string>
    <string name="trang_ch">Trang chủ</string>
    <string name="danh_m_c_qu_n_l">⌄ Danh mục quản lý ⌄</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="gi_h_ng">Giỏ Hàng</string>
    <string name="account">Tài Khoản</string>
    <string name="danh_m_c_s_n_ph_m">⌄ Danh Mục Sản Phẩm ⌄</string>

</resources>